--- a/technoshop-cms/index.html
+++ b/technoshop-cms/index.html
@@ -154,14 +154,14 @@
               </div>
               <hr>
               <label tabindex="0" for="image" class="btn btn-primary d-block mx-auto">Добавить изображение</label>
-              <input class="visually-hidden" tabindex="-1" type="file" name="image" id="image">
+              <input class="visually-hidden" tabindex="-1" type="file" name="image" id="image" accept="image/png, image/jpeg">
               <input type="hidden" name="imagesave">
               <div class="wrapper-preview">
                 <img class="preview">
               </div>
             </div>
             <div class="modal-footer">
-              <input type="hidden" name="id">
+              <input type="hidden" name="identificator">
               <button type="submit" class="btn btn-primary modal-submit-btn">Добавить товар</button>
             </div>
             
